--- a/app/components/lookbook/ui/elements/pane/tab_panel/tab_panel.html.erb
+++ b/app/components/lookbook/ui/elements/pane/tab_panel/tab_panel.html.erb
@@ -4,5 +4,7 @@
   cloak: true,
   ":aria-labelledby": "name"
 }) do %>
-  <%= content %>
+  <div class="tab-panel-content">
+    <%= content %>
+  </div>
 <% end %>
