--- a/app/components/lookbook/ui/elements/pane_group/pane_group.html.erb
+++ b/app/components/lookbook/ui/elements/pane_group/pane_group.html.erb
@@ -1,5 +1,7 @@
 <%= render component_tag(
   tag_name,
+  id: nil,
+  key: id,
   x: {
     data: "paneGroup(#{id.to_json}, #{opts.to_json})",
     effect: "initSplit",
