--- a/app/views/lookbook/previews/embed.html.erb
+++ b/app/views/lookbook/previews/embed.html.erb
@@ -1,6 +1,7 @@
 <%=
   render Lookbook::UI::PreviewEmbed.new(
     preview: @preview,
+    preview_html: @preview_html,
     target: @target,
     targets: @targets,
     panels: @panels,
