--- a/app/components/lookbook/ui/app/status_bar/status_bar.html.erb
+++ b/app/components/lookbook/ui/app/status_bar/status_bar.html.erb
@@ -20,7 +20,7 @@
       <% end %>
     <% end %>
     <% if warnings.none? && errors.none? %>
-      <%= render Lookbook::UI::StatusBarItem.new(key: "status-bar-ok", label: "No issues", theme: :success) %>  
+      <%= render Lookbook::UI::StatusBarItem.new(key: "status-bar-ok", label: "No issues", theme: :positive) %>  
     <% end %>
   </div>
 <% end %>
