--- a/app/components/lookbook/ui/elements/pane/pane.css
+++ b/app/components/lookbook/ui/elements/pane/pane.css
@@ -1,4 +1,5 @@
 [data-component="pane"] {
+  background-color: var(--lookbook-pane-background-color);
   height: 100%;
   width: 100%;
   position: relative;
