--- a/app/components/lookbook/ui/elements/nav/nav.css
+++ b/app/components/lookbook/ui/elements/nav/nav.css
@@ -36,7 +36,7 @@
 
   .nav-placeholder {
     font-size: var(--lookbook-font-size-small);
-    background-color: var(--lookbook-color-base-0);
+    background-color: var(--lookbook-color-white);
     color: var(--lookbook-color-base-500);
     padding: var(--lookbook-spacing-medium);
     border: 1px dashed var(--lookbook-color-base-300);
