--- a/public/lookbook-assets/mailer.css
+++ b/public/lookbook-assets/mailer.css
@@ -1,100 +1,11 @@
 :root {
   /*
-   * Spacings
+   * Color primitives
    */
 
-  --lookbook-spacing-3x-small: 0.125rem; /* 2px */
-  --lookbook-spacing-2x-small: 0.25rem; /* 4px */
-  --lookbook-spacing-x-small: 0.5rem; /* 8px */
-  --lookbook-spacing-small: 0.75rem; /* 12px */
-  --lookbook-spacing-medium: 1rem; /* 16px */
-  --lookbook-spacing-large: 1.25rem; /* 20px */
-  --lookbook-spacing-x-large: 1.75rem; /* 28px */
-  --lookbook-spacing-2x-large: 2.25rem; /* 36px */
-  --lookbook-spacing-3x-large: 3rem; /* 48px */
-  --lookbook-spacing-4x-large: 4.5rem; /* 72px */
+  --lookbook-color-white: #fff;
+  --lookbook-color-black: #000;
 
-  --lookbook-size-3x-small: 0.125rem; /* 2px */
-  --lookbook-size-2x-small: 0.25rem; /* 4px */
-  --lookbook-size-x-small: 0.5rem; /* 8px */
-  --lookbook-size-small: 0.75rem; /* 12px */
-  --lookbook-size-medium: 1rem; /* 16px */
-  --lookbook-size-large: 1.25rem; /* 20px */
-  --lookbook-size-x-large: 1.75rem; /* 28px */
-  --lookbook-size-2x-large: 2.25rem; /* 36px */
-  --lookbook-size-3x-large: 3rem; /* 48px */
-  --lookbook-size-4x-large: 4.5rem; /* 72px */
-
-  /*
-   * Typography
-   */
-
-  /* Fonts */
-
-  --lookbook-font-ui: "Inter Var", Roboto, "Helvetica Neue", "Arial Nova",
-    "Nimbus Sans", Arial, sans-serif;
-  --lookbook-font-prose: "Open Sans Var", Avenir, Montserrat, Corbel,
-    "URW Gothic", source-sans-pro, sans-serif;
-  --lookbook-font-mono: "Source Code Pro Var", ui-monospace, "Cascadia Code",
-    Menlo, Consolas, "DejaVu Sans Mono", monospace;
-
-  /* Font sizes */
-  --lookbook-font-size-2x-small: 0.625rem; /* 10px */
-  --lookbook-font-size-x-small: 0.75rem; /* 12px */
-  --lookbook-font-size-small: 0.875rem; /* 14px */
-  --lookbook-font-size-medium: 1rem; /* 16px */
-  --lookbook-font-size-large: 1.25rem; /* 20px */
-  --lookbook-font-size-x-large: 1.5rem; /* 24px */
-  --lookbook-font-size-2x-large: 2.25rem; /* 36px */
-  --lookbook-font-size-3x-large: 3rem; /* 48px */
-  --lookbook-font-size-4x-large: 4.5rem; /* 72px */
-
-  /* Font weights */
-  --lookbook-font-weight-light: 300;
-  --lookbook-font-weight-normal: 400;
-  --lookbook-font-weight-medium: 500;
-  --lookbook-font-weight-semibold: 600;
-  --lookbook-font-weight-bold: 700;
-
-  /*
-   * Border radii
-   */
-
-  --lookbook-border-radius-small: 0.1875rem; /* 3px */
-  --lookbook-border-radius-medium: 0.25rem; /* 4px */
-  --lookbook-border-radius-large: 0.5rem; /* 8px */
-  --lookbook-border-radius-x-large: 1rem; /* 16px */
-
-  --lookbook-border-radius-circle: 50%;
-  --lookbook-border-radius-pill: 9999px;
-
-  /*
-   * Shadows
-   */
-
-  --lookbook-shadow-x-small: 0 0 2px 0 rgba(0, 0, 0, 0.05);
-  --lookbook-shadow-small: 0 0 3px 0 rgba(0, 0, 0, 0.1),
-    0 0 2px -1px rgba(0, 0, 0, 0.1);
-  --lookbook-shadow-medium: 0 0 6px -1px rgba(0, 0, 0, 0.1),
-    0 0 4px -2px rgba(0, 0, 0, 0.1);
-  --lookbook-shadow-large: 0 0 15px -3px rgba(0, 0, 0, 0.1),
-    0 0 6px -4px rgba(0, 0, 0, 0.1);
-  --lookbook-shadow-x-large: 0 0 25px -5px rgba(0, 0, 0, 0.1),
-    0 0 10px -6px rgba(0, 0, 0, 0.1);
-
-  /*
-   * Toolbars
-   */
-
-  --lookbook-toolbar-height: 2.5rem;
-
-  /*
-   * Panels
-   */
-
-  --lookbook-panel-padding: var(--lookbook-spacing-medium);
-}
-:root {
   --lookbook-color-gray-50: hsl(0, 0%, 98%);
   --lookbook-color-gray-100: hsl(240, 5%, 96%);
   --lookbook-color-gray-200: hsl(240, 6%, 90%);
@@ -310,6 +221,107 @@
   --lookbook-color-rose-800: hsl(343, 80%, 35%);
   --lookbook-color-rose-900: hsl(342, 76%, 30%);
   --lookbook-color-rose-950: hsl(341, 70%, 17%);
+
+  /*
+   * Spacing and sizes
+   */
+
+  --lookbook-spacing-3x-small: 0.125rem; /* 2px */
+  --lookbook-spacing-2x-small: 0.25rem; /* 4px */
+  --lookbook-spacing-x-small: 0.5rem; /* 8px */
+  --lookbook-spacing-small: 0.75rem; /* 12px */
+  --lookbook-spacing-medium: 1rem; /* 16px */
+  --lookbook-spacing-large: 1.25rem; /* 20px */
+  --lookbook-spacing-x-large: 1.75rem; /* 28px */
+  --lookbook-spacing-2x-large: 2.25rem; /* 36px */
+  --lookbook-spacing-3x-large: 3rem; /* 48px */
+  --lookbook-spacing-4x-large: 4.5rem; /* 72px */
+
+  --lookbook-size-3x-small: 0.125rem; /* 2px */
+  --lookbook-size-2x-small: 0.25rem; /* 4px */
+  --lookbook-size-x-small: 0.5rem; /* 8px */
+  --lookbook-size-small: 0.75rem; /* 12px */
+  --lookbook-size-medium: 1rem; /* 16px */
+  --lookbook-size-large: 1.25rem; /* 20px */
+  --lookbook-size-x-large: 1.75rem; /* 28px */
+  --lookbook-size-2x-large: 2.25rem; /* 36px */
+  --lookbook-size-3x-large: 3rem; /* 48px */
+  --lookbook-size-4x-large: 4.5rem; /* 72px */
+
+  /*
+   * Typography
+   */
+
+  --lookbook-font-ui: "Inter Var", Roboto, "Helvetica Neue", "Arial Nova",
+    "Nimbus Sans", Arial, sans-serif;
+  --lookbook-font-prose: "Open Sans Var", Avenir, Montserrat, Corbel,
+    "URW Gothic", source-sans-pro, sans-serif;
+  --lookbook-font-mono: "Source Code Pro Var", ui-monospace, "Cascadia Code",
+    Menlo, Consolas, "DejaVu Sans Mono", monospace;
+
+  --lookbook-font-size-2x-small: 0.625rem; /* 10px */
+  --lookbook-font-size-x-small: 0.75rem; /* 12px */
+  --lookbook-font-size-small: 0.875rem; /* 14px */
+  --lookbook-font-size-medium: 1rem; /* 16px */
+  --lookbook-font-size-large: 1.25rem; /* 20px */
+  --lookbook-font-size-x-large: 1.5rem; /* 24px */
+  --lookbook-font-size-2x-large: 2.25rem; /* 36px */
+  --lookbook-font-size-3x-large: 3rem; /* 48px */
+  --lookbook-font-size-4x-large: 4.5rem; /* 72px */
+
+  --lookbook-font-weight-light: 300;
+  --lookbook-font-weight-normal: 400;
+  --lookbook-font-weight-medium: 500;
+  --lookbook-font-weight-semibold: 600;
+  --lookbook-font-weight-bold: 700;
+
+  /*
+   * Border radii
+   */
+
+  --lookbook-border-radius-small: 0.1875rem; /* 3px */
+  --lookbook-border-radius-medium: 0.25rem; /* 4px */
+  --lookbook-border-radius-large: 0.5rem; /* 8px */
+  --lookbook-border-radius-x-large: 1rem; /* 16px */
+
+  /*
+   * Shadows
+   */
+
+  --lookbook-shadow-x-small: 0 0 2px 0 rgba(0, 0, 0, 0.05);
+  --lookbook-shadow-small: 0 0 3px 0 rgba(0, 0, 0, 0.1),
+    0 0 2px -1px rgba(0, 0, 0, 0.1);
+  --lookbook-shadow-medium: 0 0 6px -1px rgba(0, 0, 0, 0.1),
+    0 0 4px -2px rgba(0, 0, 0, 0.1);
+  --lookbook-shadow-large: 0 0 15px -3px rgba(0, 0, 0, 0.1),
+    0 0 6px -4px rgba(0, 0, 0, 0.1);
+  --lookbook-shadow-x-large: 0 0 25px -5px rgba(0, 0, 0, 0.1),
+    0 0 10px -6px rgba(0, 0, 0, 0.1);
+}
+:root {
+  /*
+   * App header
+   */
+
+  --lookbook-header-height: 2.5rem;
+
+  /*
+   * Toolbars
+   */
+
+  --lookbook-toolbar-height: 2.5rem;
+
+  /*
+   * Panels
+   */
+
+  --lookbook-panel-padding: var(--lookbook-spacing-medium);
+
+  /*
+   * Status bar
+   */
+
+  --lookbook-status-bar-height: 1.5rem;
 }
 :root,
 :host,
@@ -317,6 +329,10 @@
   --csstools-color-scheme--light: initial;
   --csstools-color-scheme--dark:  ;
   color-scheme: light;
+
+  /*
+   * Colour scheme
+   */
 
   --lookbook-color-accent-50: var(--lookbook-color-indigo-50);
   --lookbook-color-accent-100: var(--lookbook-color-indigo-100);
@@ -330,7 +346,6 @@
   --lookbook-color-accent-900: var(--lookbook-color-indigo-900);
   --lookbook-color-accent-950: var(--lookbook-color-indigo-950);
 
-  --lookbook-color-base-0: #fff;
   --lookbook-color-base-50: var(--lookbook-color-gray-50);
   --lookbook-color-base-100: var(--lookbook-color-gray-100);
   --lookbook-color-base-200: var(--lookbook-color-gray-200);
@@ -343,7 +358,6 @@
   --lookbook-color-base-900: var(--lookbook-color-gray-900);
   --lookbook-color-base-950: var(--lookbook-color-gray-950);
 
-  /* Success */
   --lookbook-color-success-50: var(--lookbook-color-green-50);
   --lookbook-color-success-100: var(--lookbook-color-green-100);
   --lookbook-color-success-200: var(--lookbook-color-green-200);
@@ -356,7 +370,6 @@
   --lookbook-color-success-900: var(--lookbook-color-green-900);
   --lookbook-color-success-950: var(--lookbook-color-green-950);
 
-  /* Warning */
   --lookbook-color-warning-50: var(--lookbook-color-amber-50);
   --lookbook-color-warning-100: var(--lookbook-color-amber-100);
   --lookbook-color-warning-200: var(--lookbook-color-amber-200);
@@ -369,7 +382,6 @@
   --lookbook-color-warning-900: var(--lookbook-color-amber-900);
   --lookbook-color-warning-950: var(--lookbook-color-amber-950);
 
-  /* Danger */
   --lookbook-color-danger-50: var(--lookbook-color-red-50);
   --lookbook-color-danger-100: var(--lookbook-color-red-100);
   --lookbook-color-danger-200: var(--lookbook-color-red-200);
@@ -382,7 +394,66 @@
   --lookbook-color-danger-900: var(--lookbook-color-red-900);
   --lookbook-color-danger-950: var(--lookbook-color-red-950);
 
-  --lookbook-divider-color: var(--lookbook-color-base-300);
+  /*
+   * App
+   */
+
+  --lookbook-app-color: var(--lookbook-color-base-900);
+  --lookbook-app-divider-color: var(--lookbook-color-base-300);
+  --lookbook-app-focus-outline-color: var(--lookbook-color-accent-200);
+
+  /*
+   * Header
+   */
+
+  --lookbook-header-color: var(--lookbook-color-white);
+  --lookbook-header-background-color: var(--lookbook-color-accent-600);
+
+  /*
+   * Tables
+   */
+
+  --lookbook-table-color: var(--lookbook-color-base-900);
+  --lookbook-table-border-color: var(--lookbook-app-divider-color);
+  --lookbook-table-background-color: var(--lookbook-color-white);
+
+  /*
+   * Panes
+   */
+
+  --lookbook-pane-background-color: var(--lookbook-color-base-50);
+
+  /*
+   * Status bar
+   */
+
+  --lookbook-status-bar-color: var(--lookbook-base-600);
+  --lookbook-status-bar-background-color: var(--lookbook-color-white);
+  --lookbook-status-bar-action-color: var(--lookbook-color-accent-700);
+  --lookbook-status-bar-item-color-positive: var(--lookbook-color-success-700);
+  --lookbook-status-bar-item-color-error: var(--lookbook-color-danger-600);
+  --lookbook-status-bar-item-color-warning: var(--lookbook-color-warning-600);
+  --lookbook-status-bar-item-color-info: var(--lookbook-color-info-600);
+  --lookbook-status-bar-notifications-color: var(--lookbook-app-color);
+  --lookbook-status-bar-notifications-background-color: var(
+    --lookbook-color-white
+  );
+
+  /*
+   * System message
+   */
+
+  --lookbook-system-message-color: var(--lookbook-color-base-500);
+  --lookbook-system-message-background-color: var(--lookbook-color-white);
+  --lookbook-system-message-border-color: var(--lookbook-app-divider-color);
+  --lookbook-system-message-title-color: var(--lookbook-color-base-900);
+  --lookbook-system-message-icon-color: var(--lookbook-color-base-300);
+
+  --lookbook-system-message-title-color-error: var(--lookbook-color-danger-600);
+  --lookbook-system-message-border-color-error: var(
+    --lookbook-color-danger-200
+  );
+  --lookbook-system-message-icon-color-error: var(--lookbook-color-danger-300);
 }
 @font-face {
   font-family: "Inter";
@@ -646,7 +717,8 @@ body {
   font-family: var(--lookbook-font-ui);
   font-size: 1rem;
   font-size: var(--lookbook-font-size-medium);
-  color: var(--lookbook-color-neutral-900);
+  color: hsl(240, 6%, 10%);
+  color: var(--lookbook-app-color);
 }
 body {
   min-height: 100vh;
@@ -669,9 +741,11 @@ router {
 }
 table {
   background: #fff;
-  background: var(--lookbook-color-base-0);
+  background: var(--lookbook-table-background-color);
   border: 1px solid hsl(240, 5%, 84%);
-  border: 1px solid var(--lookbook-color-base-300);
+  border: 1px solid var(--lookbook-table-border-color);
+  color: hsl(240, 6%, 10%);
+  color: var(--lookbook-table-color);
   width: 100%;
   border-collapse: collapse;
   font-size: 0.875rem;
@@ -693,13 +767,13 @@ td {
 thead tr,
 tr:not(:last-child) {
   border-bottom: 1px solid hsl(240, 5%, 84%);
-  border-bottom: 1px solid var(--lookbook-color-base-300);
+  border-bottom: 1px solid var(--lookbook-table-border-color);
 }
 :focus-visible {
   outline: 1px solid transparent;
   outline-offset: 0;
   outline-color: hsl(228, 97%, 89%);
-  outline-color: var(--lookbook-color-accent-200);
+  outline-color: var(--lookbook-app-focus-outline-color);
 }
 /* Utilities */
 .bg-checked {
@@ -725,7 +799,7 @@ header {
     "Nimbus Sans", Arial, sans-serif;
   font-family: var(--lookbook-font-ui);
   border-bottom: 1px solid hsl(240, 5%, 84%);
-  border-bottom: 1px solid var(--lookbook-divider-color);
+  border-bottom: 1px solid var(--lookbook-app-divider-color);
   overflow: hidden;
 }
 dl {
